fixed wrap for unit in normal mode

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -175,6 +175,10 @@
 }
 
 
+#unit-unit-short-desc{
+	white-space: pre-wrap;
+}
+
 
 
 #unit-unit-modal{
